Fixing final `continue` button click

--- a/app/src/main/res/layout/content_onboarding_no_trace.xml
+++ b/app/src/main/res/layout/content_onboarding_no_trace.xml
@@ -68,6 +68,7 @@
     <Button
         android:id="@+id/continueButton"
         style="@style/OnboardingButtonNoTrace"
+        android:onClick="onDoneClicked"
         android:theme="@style/OnboardingButtonNoTrace" />
 
 </android.support.constraint.ConstraintLayout>
