--- a/app/src/main/res/layout/content_onboarding_protect_data.xml
+++ b/app/src/main/res/layout/content_onboarding_protect_data.xml
@@ -32,20 +32,20 @@
         android:importantForAccessibility="no"
         android:paddingTop="20dp"
         android:src="@drawable/onboarding_image_protect_data"
+        app:layout_constraintBottom_toTopOf="@id/textContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textContainer"
         app:layout_constraintVertical_bias="0.5" />
 
     <LinearLayout
         android:id="@+id/textContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/continueButton"
         app:layout_constraintTop_toBottomOf="@id/noTraceImage">
 
@@ -62,6 +62,7 @@
     <Button
         android:id="@+id/continueButton"
         style="@style/OnboardingButtonProtectData"
+        android:onClick="onContinueClicked"
         android:theme="@style/OnboardingButtonProtectData" />
 
 </android.support.constraint.ConstraintLayout>
