Fix capatisation of title input field

--- a/app/src/main/res/layout/add_or_edit_bookmark.xml
+++ b/app/src/main/res/layout/add_or_edit_bookmark.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bookmarkTitleHint"
-            android:inputType="textCapCharacters" />
+            android:inputType="text|textCapWords" />
 
     </android.support.design.widget.TextInputLayout>
 
