--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,5 +32,6 @@
     <color name="muddyGreen">#58732e</color>
     <color name="midGreen">#3fa140</color>
 
+    <color name="white_two">#e4e4e4</color>
 
 </resources>
