--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -22,19 +22,18 @@
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:paddingEnd="16dp"
-    android:paddingStart="16dp">
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="4dp"
+>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:paddingEnd="4dp"
-        android:paddingStart="8dp"
+        android:layout_marginStart="22dp"
         android:textColor="@color/white"
+        android:paddingTop="4dp"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/url"
@@ -49,9 +48,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:paddingEnd="4dp"
-        android:paddingStart="8dp"
+        android:layout_marginStart="22dp"
         android:paddingTop="2dp"
+        android:paddingBottom="4dp"
         android:textColor="@color/warmGrey"
         android:textSize="12sp"
         android:textStyle="normal"
@@ -64,8 +63,11 @@
     <ImageView
         android:id="@+id/overflowMenu"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_height="0dp"
+        android:scaleType="center"
+        android:paddingEnd="14dp"
+        android:paddingStart="14dp"
+        android:background="?android:attr/selectableItemBackground"
         android:src="@drawable/ic_overflow_24px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
