--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -22,37 +22,58 @@
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:padding="16dp">
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="4dp"
+>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:lineSpacingExtra="4sp"
-        android:paddingEnd="4dp"
-        android:paddingStart="8dp"
+        android:layout_marginStart="22dp"
         android:textColor="@color/white"
+        android:paddingTop="4dp"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/delete"
+        app:layout_constraintBottom_toTopOf="@+id/url"
+        app:layout_constraintEnd_toStartOf="@+id/overflowMenu"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Bookmark" />
 
-    <!-- content description set to network name in code -->
-    <ImageView
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/url"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/appName"
-        android:padding="4dp"
-        android:src="@drawable/ic_clear_black_24px"
-        android:tint="@color/white"
+        android:fontFamily="sans-serif"
+        android:layout_marginStart="22dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="4dp"
+        android:textColor="@color/warmGrey"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/overflowMenu"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        tools:text="Bookmark" />
+
+    <ImageView
+        android:id="@+id/overflowMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:scaleType="center"
+        android:paddingEnd="14dp"
+        android:paddingStart="14dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/ic_overflow_24px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:ignore="ContentDescription" />
 
 
 </android.support.constraint.ConstraintLayout>
