Add setting headings and add option to launch onboarding again

--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -134,7 +134,7 @@
             android:id="@+id/autoCompleteSuggestionsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/charcoalGrey"
+            android:background="@color/charcoalGray"
             android:clipToPadding="false"
             android:paddingBottom="14dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
