--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -51,7 +51,7 @@
         android:layout_marginStart="22dp"
         android:paddingTop="2dp"
         android:paddingBottom="4dp"
-        android:textColor="@color/warmGrey"
+        android:textColor="@color/warmGray"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
