--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
     <style name="DashboardHeader">
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:letterSpacing">0.14</item>
-        <item name="android:textColor">@color/warmGrey</item>
+        <item name="android:textColor">@color/warmGray</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -86,25 +86,42 @@
         <item name="android:textColor">@color/midGreen</item>
         <item name="android:paddingBottom">12dp</item>
         <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingEnd">20dp</item>
-        <item name="android:paddingStart">20dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingStart">10dp</item>
+    </style>
+
+    <style name="SettingsContentTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">32dp</item>
+        <item name="android:paddingBottom">14dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@color/warmGray</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:selectable">false</item>
     </style>
 
     <style name="SettingsContentLabel">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:layout_marginStart">20dp</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:selectable">false</item>
     </style>
 
     <style name="SettingsContentLabelClickable" parent="SettingsContentLabel">
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingBottom">12dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
         <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
@@ -113,10 +130,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:layout_marginStart">20dp</item>
-        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:paddingTop">-4dp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:lineSpacingExtra">4sp</item>
-        <item name="android:textColor">#969799</item>
+        <item name="android:textColor">@color/warmGray</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
     </style>
@@ -128,7 +145,7 @@
     <style name="SettingsContentLabel.SettingsSwitch" >
         <item name="colorControlActivated">@color/midGreen</item>
         <item name="colorSwitchThumbNormal">@color/white</item>
-        <item name="android:colorForeground">@color/subtleGreyTwo</item>
+        <item name="android:colorForeground">@color/subtleGrayTwo</item>
         <item name="android:layout_marginEnd">0dp</item>
         <item name="android:layout_marginStart">0dp</item>
         <item name="android:layout_marginTop">0dp</item>
