--- a/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
+++ b/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.duckduckgo.app.browser.NestedWebView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/browserWebView"
     android:layout_width="match_parent"
@@ -30,4 +30,4 @@
     android:visibility="gone"
     tools:visibility="visible">
 
-</WebView>
+</com.duckduckgo.app.browser.NestedWebView>
