--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -47,7 +47,7 @@
         android:layout_marginStart="20dp"
         android:transitionName="@string/transition_url_input"
         android:layout_marginTop="36dp"
-        android:background="#5e6168"
+        android:background="@drawable/search_background"
         android:drawableEnd="@drawable/ic_search_white_18dp"
         android:gravity="center_vertical"
         android:paddingEnd="16dp"
