Change to a grey colour for scrollbar thumb and tweak toolbar style

--- a/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
+++ b/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
@@ -22,11 +22,12 @@
     android:fadeScrollbars="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:scrollbarSize="3dp"
-    android:scrollbarThumbVertical="@color/colorAccent"
-    android:scrollbarTrackVertical="@color/webViewScrollbarTrackColor"
-    android:scrollbarThumbHorizontal="@color/colorAccent"
+    android:scrollbarSize="4dp"
+    android:scrollbarStyle="outsideInset"
+    android:scrollbarThumbHorizontal="@color/webViewScrollbarThumbColor"
+    android:scrollbarThumbVertical="@color/webViewScrollbarThumbColor"
     android:scrollbarTrackHorizontal="@color/webViewScrollbarTrackColor"
+    android:scrollbarTrackVertical="@color/webViewScrollbarTrackColor"
     android:visibility="gone"
     tools:visibility="visible">
 
